// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly game 1`] = `
<ul
  className="MenuNavigationGame-root-11"
>
  <li>
    <div
      className="MenuNavigationGame-logout-20"
      onClick={[Function]}
    >
      Logout
    </div>
  </li>
  <li>
    <a
      className="MenuNavigationGame-headerMenuItem-12"
      href="/"
      onClick={[Function]}
    >
      <i
        className="MenuNavigationGame-menuIcon-13 MenuNavigationGame-dashboard-14"
      />
      <br />
       Dashboard
    </a>
  </li>
  <li>
    <a
      className="MenuNavigationGame-headerMenuItem-12"
      href="/"
      onClick={[Function]}
    >
      <i
        className="MenuNavigationGame-menuIcon-13 MenuNavigationGame-walletIcon-15"
      />
      <br />
       Wallet
    </a>
  </li>
  <li>
    <a
      className="MenuNavigationGame-headerMenuItem-12"
      href="/"
      onClick={[Function]}
    >
      <i
        className="MenuNavigationGame-menuIcon-13 MenuNavigationGame-shop-16"
      />
      <br />
       Shop
    </a>
  </li>
  <li>
    <a
      className="MenuNavigationGame-headerMenuItem-12"
      href="/games"
      onClick={[Function]}
    >
      <i
        className="MenuNavigationGame-menuIcon-13 MenuNavigationGame-games-17"
      />
      <br />
       Games
    </a>
  </li>
  <li>
    <a
      className="MenuNavigationGame-headerMenuItem-12"
      href="/"
      onClick={[Function]}
    >
      <i
        className="MenuNavigationGame-menuIcon-13 MenuNavigationGame-friends-18"
      />
      <br />
       Friends
    </a>
  </li>
  <li>
    <a
      className="MenuNavigationGame-headerMenuItem-12"
      href="/"
      onClick={[Function]}
    >
      <i
        className="MenuNavigationGame-menuIcon-13 MenuNavigationGame-settings-19"
      />
      <br />
       Settings
    </a>
  </li>
</ul>
`;

exports[`renders correctly main 1`] = `
<ul
  className="MenuNavigation-root-1"
>
  <li>
    <div
      className="MenuNavigation-logout-10"
      onClick={[Function]}
    >
      Logout
    </div>
  </li>
  <li>
    <a
      aria-current="page"
      className="MenuNavigation-headerMenuItem-2 active"
      href="/"
      onClick={[Function]}
      style={Object {}}
    >
      <i
        className="MenuNavigation-menuIcon-3 MenuNavigation-walletIcon-5"
      />
      <br />
       Wallet
    </a>
  </li>
  <li>
    <a
      aria-current={null}
      className="MenuNavigation-headerMenuItem-2"
      href="/games"
      onClick={[Function]}
    >
      <i
        className="MenuNavigation-menuIcon-3 MenuNavigation-games-7"
      />
      <br />
       Games
    </a>
  </li>
  <li>
    <a
      aria-current={null}
      className="MenuNavigation-headerMenuItem-2"
      href="/#apps"
      onClick={[Function]}
    >
      <i
        className="MenuNavigation-menuIcon-3 MenuNavigation-shop-6"
      />
      <br />
       Apps
    </a>
  </li>
  <li>
    <a
      aria-current={null}
      className="MenuNavigation-headerMenuItem-2"
      href="/#shop"
      onClick={[Function]}
    >
      <i
        className="MenuNavigation-menuIcon-3 MenuNavigation-shop-6"
      />
      <br />
       Shop
    </a>
  </li>
  <li>
    <a
      aria-current={null}
      className="MenuNavigation-headerMenuItem-2"
      href="/#contacts"
      onClick={[Function]}
    >
      <i
        className="MenuNavigation-menuIcon-3 MenuNavigation-friends-8"
      />
      <br />
       Contacts
    </a>
  </li>
  <li>
    <a
      aria-current={null}
      className="MenuNavigation-headerMenuItem-2"
      href="/#setting"
      onClick={[Function]}
    >
      <i
        className="MenuNavigation-menuIcon-3 MenuNavigation-settings-9"
      />
      <br />
       Settings
    </a>
  </li>
</ul>
`;
